--- a/views/layout.html
+++ b/views/layout.html
@@ -8,10 +8,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
-    <title>Python Terminal by Code Institute</title>
+    <title>Feline Pine Cat Retirement Home</title>
     <style>
+
+        html {
+        background-color: black;
+        }    
         body {
             font-family: Arial;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         /**
