--- a/views/layout.html
+++ b/views/layout.html
@@ -14,10 +14,12 @@
         html {
         background-color: black;
         }    
+        
         body {
             font-family: Arial;
-            margin-left: auto;
-            margin-right: auto;
+            margin: 0 auto;
+            max-width: 50rem;
+            height: 100vh;
         }
 
         /**
