--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,9 @@
 <body>
-    <button onclick="window.location.reload()">Run Program</button>
-    <div id="terminal"></div>
-
+    <div id="main-content">
+        <h1>Feline Pine Cat Retirement Home</h1>
+        <button onclick="window.location.reload()">Run Program</button>
+        <div id="terminal"></div>
+    </div>
     <script>
         var term = new Terminal({
             cols: 80,
