--- a/views/layout.html
+++ b/views/layout.html
@@ -22,6 +22,10 @@
             height: 100vh;
         }
 
+        #main-content {
+        display: contents;
+        position: relative;
+        }
         /**
         * Default styles for xterm.js
         */
