experiment with styling and layout

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,10 @@
 <body>
     <div id="main-content">
-        <h1>Feline Pine Cat Retirement Home</h1>
-        <button onclick="window.location.reload()">Run Program</button>
+        <header>
+            <h1>Feline Pine Cat Retirement Home</h1>
+            <button onclick="window.location.reload()">Run Program</button>
+        </header>
+        
         <div id="terminal"></div>
     </div>
     <script>
