--- a/views/layout.html
+++ b/views/layout.html
@@ -17,14 +17,20 @@
         
         body {
             font-family: Arial;
+            color: white;
             margin: 0 auto;
             max-width: 50rem;
             height: 100vh;
         }
 
+        header {
+            text-align: center;
+        }
+        
         #main-content {
         display: contents;
         position: relative;
+        text-align: center;
         }
         /**
         * Default styles for xterm.js
@@ -101,6 +107,8 @@
 
         .xterm .xterm-screen {
             position: relative;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .xterm .xterm-screen canvas {
