--- a/views/layout.html
+++ b/views/layout.html
@@ -25,8 +25,10 @@
 
         header {
             text-align: center;
+            margin-left: auto;
+            margin-right: auto;
         }
-        
+
         #main-content {
         display: contents;
         position: relative;
@@ -62,7 +64,8 @@
         .xterm .xterm-helper-textarea {
             padding: 0;
             border: 0;
-            margin: 0;
+            margin-left: auto;
+            margin-right: auto;
             /* Move textarea out of the screen to the far left, so that the cursor is not visible */
             position: absolute;
             opacity: 0;
