import google fonts

--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
     <title>Feline Pine Cat Retirement Home</title>
     <style>
+        @import url("https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap");
 
         html {
         background-color: black;
@@ -24,6 +25,7 @@
         }
 
         header {
+            font-family: 'Courier Prime', monospace;
             text-align: center;
             margin-left: auto;
             margin-right: auto;
@@ -178,11 +180,17 @@
             text-decoration: underline;
         }
 
+        button:hover {
+            background-color: white;
+            color: black;
+        }
+
         button {
-            width: 200px;
-            height: 40px;
-            background-color: #E84610;
-            border: 1px solid grey;
+            width: 100px;
+            height: 20px;
+            font-family: 'Courier Prime', monospace;
+            background-color: black;
+            border: 1px solid white;
             color: white;
             text-transform: uppercase;
             margin: 10px;
