--- a/views/layout.html
+++ b/views/layout.html
@@ -69,7 +69,7 @@
             margin-left: auto;
             margin-right: auto;
             /* Move textarea out of the screen to the far left, so that the cursor is not visible */
-            position: absolute;
+            /* position: absolute; */
             opacity: 0;
             left: -9999em;
             top: 0;
@@ -99,11 +99,11 @@
         .xterm .xterm-viewport {
             /* On OS X this is required in order for the scroll bar to appear fully opaque */
             background-color: #000;
-            overflow-y: scroll;
+            overflow-y: auto;
             cursor: default;
             position: absolute;
             right: 0;
-            left: 0;
+            /* left: 0; */
             top: 0;
             bottom: 0;
             background-color: rgb(0, 0, 0);
@@ -112,8 +112,6 @@
 
         .xterm .xterm-screen {
             position: relative;
-            margin-left: auto;
-            margin-right: auto;
         }
 
         .xterm .xterm-screen canvas {
@@ -186,14 +184,14 @@
         }
 
         button {
-            width: 100px;
-            height: 20px;
+            width: 150px;
+            height: 35px;
             font-family: 'Courier Prime', monospace;
             background-color: black;
             border: 1px solid white;
             color: white;
             text-transform: uppercase;
-            margin: 10px;
+            margin-bottom: 2em;
             border-radius: 8px;
         }
     </style>
