add left padding to text in terminal window

--- a/views/layout.html
+++ b/views/layout.html
@@ -116,7 +116,7 @@
 
         .xterm .xterm-screen canvas {
             position: absolute;
-            left: 0;
+            left: 2em;
             top: 0;
         }
 
