--- a/views/layout.html
+++ b/views/layout.html
@@ -112,6 +112,7 @@
 
         .xterm .xterm-screen {
             position: relative;
+            height: 500px;
         }
 
         .xterm .xterm-screen canvas {
